--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
     "vue-slick-carousel": "^1.0.6"
