--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "@tailwindcss/aspect-ratio": "^0.2.0",
-    "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
+    "core-js": "^3.15.2",
+    "nuxt": "^2.15.7",
     "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^4.1.2",
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "postcss": "^8.2.15",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.1.2"
+    "postcss": "^8.3.5",
+    "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.4"
   }
 }
